--- a/index.html
+++ b/index.html
@@ -1,180 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ecommerce Website</title>
-    <link rel="Stylesheet" href="/CSS/style.css">
-    <style>
-        html{
-            scroll-behavior: smooth;
-        }
-        .responsive-image{
-            max-width: 100%;
-            height: auto;
-        }
-        </style>
-</head>
-<body>
-    <div class="container">
-        <div class="navbar"> 
-            <div class="toggle-button-and-logo">
-                <div class="toggle-button" onclick="toggleMenu()">☰</div>
-                <div class="logo">
-                    <img src="images/logo.png" alt="LOGO" width="125px">
-                </div>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="#home">HOME</a></li>
-                    <li><a href="#product">PRODUCT</a></li>
-                    <li><a href="#about">ABOUT</a></li>
-                    <li><a href="#contact">CONTACT</a></li>
-                    <li><a href="#account">ACCOUNT</a></li>
-                </ul>
-            </nav>
-        </div>
 
-        <!----head section-------->
-        <div class="head" id="home">
-            <div class="row">
-                <div class="col2">
-                    <h1>Give Your Workout<br> A New Style</h1>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente necessitatibus iste ipsam<br> debitis magni quasi minus architecto!</p>
-                    <div class="col2">
-                        <img src="images/image1.png" alt="Image">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!------featured categories-->
-    <div class="categories" id="products">
-        <div class="small-container">
-            <div class="col3">
-                <img src="images/category-1.jpg" alt="Category 1" class="responsive-image">
-            </div>
-            <div class="col3">
-                <img src="images/category-2.jpg" alt="Category 2" class="responsive-image">
-            </div>
-            <div class="col3">
-                <img src="images/category-3.jpg" alt="Category 3" class="responsive-image">
-            </div>
-        </div>
-    </div>
-    
-     
-    <!----offers section------>
-    <div class="offer" id="about">
-        <div class="small-container2">
-            <div class="col2">
-                <img src="images/exclusive.png">
-            </div>
-            <div class="col2">
-                <p>Exclusively Available on Redstore</p>
-                <h1>Smart Band-4</h1>
-                <small>The Mi smart band 4 features a 39.9% larger AMOLED color full-touch display with adjustable brightness, so everything is clear as can be.</small>
-            </div>
-        </div>
-    </div>
-
-    <!-- Brands section -->
-    <div class="brands" id="contact">
-        <ul>
-            <li><img src="images/logo-godrej.png"></li>
-            <li><img src="images/logo-coca-cola.png"></li>
-            <li><img src="images/logo-oppo.png"></li>
-            <li><img src="images/logo-paypal.png"></li>
-            <li><img src="images/logo-philips.png"></li>
-        </ul>
-    </div>
-
-    <!-- Back to Top Button -->
-    <button id="backToTop" onclick="scrollToTop()">Top</button>
-
-    <!-- Footer -->
-
-    <div class="footer" id="account">
-        <div class="container">
-            <div class="row">
-                <div class="footer-col-1">
-                    <h3>Download Our App</h3>
-                    <div class="app">
-                        <img src="images/app-store.png">
-                        <img src="images/play-store.png">
-                    </div>
-                    <p>Download App for Android and iOS mobile phone.</p>
-                </div>
-                <div class="footer-col-2">
-                    <img src="images/logo-white.png">
-                    <p>Our Purpose is to sustainably make the pleasure and benefits of sports accessible to many.</p>
-                </div>
-                <div class="footer-col-3">
-                    <h3>Useful Links</h3>
-                    <ul>
-                        <li>Coupons</li>
-                        <li>Blog Post</li>
-                        <li>Return Policy</li>
-                        <li>Join Affairs</li>
-                    </ul>
-                </div>
-                <div class="footer-col-4">
-                    <h3>Follow Us</h3>
-                    <ul>
-                        <li>Facebook</li>
-                        <li>Twitter</li>
-                        <li>Instagram</li>
-                        <li>Threads</li>
-                    </ul>
-
-<div class="footer">
-    <div class="container">
-        <div class="row">
-            <!-- Column 1: Download Our App -->
-            <div class="footer-col-1">
-                <h3>Download Our App</h3>
-                <div class="app">
-                    <a href="#"><img src="images/app-store.png" alt="App Store"></a>
-                    <a href="#"><img src="images/play-store.png" alt="Google Play Store"></a>
-
-                </div>
-                <p>Get our app for Android and iOS devices.</p>
-            </div>
-            <!-- Column 2: About Us -->
-            <div class="footer-col-2">
-                <a href="#"><img src="images/logo-white.png" alt="Company Logo"></a>
-                <p>Our mission is to make sports enjoyable and accessible for everyone, sustainably.</p>
-            </div>
-            <!-- Column 3: Useful Links -->
-            <div class="footer-col-3">
-                <h3>Useful Links</h3>
-                <ul>
-                    <li><a href="#">Coupons</a></li>
-                    <li><a href="#">Blog Post</a></li>
-                    <li><a href="#">Return Policy</a></li>
-                    <li><a href="#">Join Us</a></li>
-                </ul>
-            </div>
-            <!-- Column 4: Follow Us -->
-            <div class="footer-col-4">
-                <h3>Follow Us</h3>
-                <ul>
-                    <li><a href="#">Facebook</a></li>
-                    <li><a href="#">Twitter</a></li>
-                    <li><a href="#">Instagram</a></li>
-                    <li><a href="#">Threads</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <hr>
-    <div class="copyright">
-        <p>&copy; 2024 All Rights Reserved</p>
-    </div>
-</div>
-
-
-    <script src="script.js"></script>
-</body>
-</html>
+<!-- saved from url=(0095)https://aws-tc-largeobjects.s3-us-west-2.amazonaws.com/CUR-TF-100-ACCAIC-1/lab-02-s3/index.html -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252"></head><body><h1>Hello World. Take me to your leader.</h1>
+</body></html>
